# kotaro_homepage

./: .gitignore  DBList.txt  package-lock.json  package.json
backend/: Cargo.toml  package-lock.json  package.json  server.js
backend/src/: main.rs
frontend/: email.html  header-footer.js  index.css  index.html  product-detail.css  product-detail.html  product-list.css  product-list.html  register.css  register.html  script.js  signin.html  signup.css  signup.html  styles.css  verify.html
frontend/images/: publicdomainq-0046040jio.jpg:Zone.Identifier
frontend/models/: GLB.glb:Zone.Identifier
