[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.7.0"
bcrypt = "0.15.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lettre = "0.11.7"
mysql = "25.0.1"
rand = "0.8.5"
serde = {version = "1.0.203", features=["derive"]}
serde_json = "1.0.117"
